Fix(ui): align chapter duration

--- a/src/css/chapter.css
+++ b/src/css/chapter.css
@@ -144,7 +144,7 @@
   font-weight: 200;
   margin: 0 5%;
   flex-shrink: 0;
-  min-width: 30px;
+  min-width: 60px;
   text-align: left
 }
 .shk-chapter_title_wrap {
